# k8s-itlabs-operator

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yml  gitlab-sync-on-merge-pr.yml  gitlab-sync-on-push.yml  gitlab-sync.yml  main.yml
docker/: Dockerfile
docs/: ru.md
docs/files/: k8s-itlabs-operator.graphml
docs/ru/: index.md  scheme.md
e2e_tests/: e2e-tests.sh  e2e.tests.Dockerfile
e2e_tests/kind/: crd-servicemonitor.yaml  e2e-rbac.yaml  kind-config.yaml  prepare-kind.sh
e2e_tests/operator/: cert-manager.yaml
e2e_tests/preparejob/: k8s-prepare-infrastructure-job.yaml  prepare.infra.Dockerfile  prepare_infra.py
e2e_tests/services/: docker-compose-infra.yaml  docker-compose-test.yaml
e2e_tests/tester/: job-e2e-tests.yaml
examples/: crd_keycloakconnector.yaml  crd_postgresconnector.yaml  crd_rabbitconnector.yaml  crd_sentryconnector.yaml  deployment_keycloak_connector.yaml  deployment_pg_connector.yaml  deployment_rabbit_connector.yaml  deployment_sentry_connector.yaml
k8s-itlabs-operator/: exceptions.py  main.py  pytest.ini  settings.py
k8s-itlabs-operator/operators/: atlasconnector.py  dto.py  healthz.py  keycloak.py  monitoringconnector.py  postgresconnector.py  rabbitconnector.py  sentry.py
k8s-itlabs-operator/utils/: common.py  concurrency.py  hashing.py  logger.py  passgen.py  validation.py
manifests/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
scripts/: create-install-manifests.sh  run-tests.sh  start_local_runner.sh  update-manifests.sh
(+181 files in other folders)
