[tool.poetry]
name = "k8s-itlabs-operator"
version = "1.3.1"
description = "Operator for preparing infrastructure dependencies of services"
authors = ["itlabs.io"]

[tool.poetry.dependencies]
python = "^3.10"
kopf = "1.36.0"
kubernetes = "25.3.0"
hvac = "1.0.2"
psycopg2-binary = "2.9.5"
sentry-sdk = "1.16.0"
prometheus-client = "0.16.0"
ujson = "5.7.0"
wrapt = "1.15.0"
pytest = "7.2.0"
pytest-asyncio = "0.21.0"
pytest-mock = "3.10.0"
factory-boy = "3.2.1"
environs = "9.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
